==> eclipse-zenoh/zenoh-pico/src/system/mbed/network.cpp <==
#include <NetworkInterface.h>
#include <USBSerial.h>
#include <mbed.h>
#include <netdb.h>
#include <stdbool.h>
#include <stddef.h>
#include <string.h>
#include "zenoh-pico/collections/string.h"
#include "zenoh-pico/config.h"
#include "zenoh-pico/system/link/serial.h"
#include "zenoh-pico/system/platform.h"
#include "zenoh-pico/utils/checksum.h"
#include "zenoh-pico/utils/encoding.h"
#include "zenoh-pico/utils/logging.h"
#include "zenoh-pico/utils/pointers.h"

int8_t _z_open_tcp(_z_sys_net_socket_t *sock, const _z_sys_net_endpoint_t rep, uint32_t tout) {
    int8_t ret = _Z_RES_OK;

    sock->_tcp = new TCPSocket();
    sock->_tcp->set_timeout(tout);
    if ((ret == _Z_RES_OK) && (sock->_tcp->open(NetworkInterface::get_default_instance()) < 0)) {
        ret = _Z_ERR_GENERIC;
    }

    if ((ret == _Z_RES_OK) && (sock->_tcp->connect(*rep._iptcp) < 0)) {
        ret = _Z_ERR_GENERIC;
    }

    if (ret != _Z_RES_OK) {
        delete sock->_tcp;
    }

    return ret;
}

int8_t _z_open_udp_unicast(_z_sys_net_socket_t *sock, const _z_sys_net_endpoint_t rep, uint32_t tout) {
    int8_t ret = _Z_RES_OK;
    (void)sock;
    (void)rep;

    sock->_udp = new UDPSocket();
    sock->_udp->set_timeout(tout);
    if ((ret == _Z_RES_OK) && (sock->_udp->open(NetworkInterface::get_default_instance()) < 0)) {
        ret = _Z_ERR_GENERIC;
    }

    if (ret != _Z_RES_OK) {
        delete sock->_tcp;
    }

    return ret;
}

size_t _z_read_udp_unicast(const _z_sys_net_socket_t sock, uint8_t *ptr, size_t len) {
    SocketAddress raddr;
    nsapi_size_or_error_t rb = sock._udp->recvfrom(&raddr, ptr, len);
    if (rb < (nsapi_size_or_error_t)0) {
        rb = SIZE_MAX;
    }

    return rb;
}

int8_t _z_open_udp_multicast(_z_sys_net_socket_t *sock, const _z_sys_net_endpoint_t rep, _z_sys_net_endpoint_t *lep,
                             uint32_t tout, const char *iface) {
    int8_t ret = _Z_RES_OK;
    (void)(lep);  // Multicast messages are not self-consumed, so no need to save the local address

    sock->_udp = new UDPSocket();
    sock->_udp->set_timeout(tout);
    if ((ret == _Z_RES_OK) && (sock->_udp->open(NetworkInterface::get_default_instance()) < 0)) {
        ret = _Z_ERR_GENERIC;
    }

    if (ret != _Z_RES_OK) {
        delete sock->_tcp;
    }

    return ret;
}

int8_t _z_listen_udp_multicast(_z_sys_net_socket_t *sock, const _z_sys_net_endpoint_t rep, uint32_t tout,
                               const char *iface, const char *join) {
    (void)join;
    int8_t ret = _Z_RES_OK;

    sock->_udp = new UDPSocket();
    sock->_udp->set_timeout(tout);
    if ((ret == _Z_RES_OK) && (sock->_udp->open(NetworkInterface::get_default_instance()) < 0)) {
        ret = _Z_ERR_GENERIC;
    }

    if ((ret == _Z_RES_OK) && (sock->_udp->bind(rep._iptcp->get_port()) < 0)) {
        ret = _Z_ERR_GENERIC;
    }

    if ((ret == _Z_RES_OK) && (sock->_udp->join_multicast_group(*rep._iptcp) < 0)) {
        ret = _Z_ERR_GENERIC;
    }

    if (ret != _Z_RES_OK) {
        delete sock->_tcp;
    }

    return ret;
}

void _z_close_udp_multicast(_z_sys_net_socket_t *sockrecv, _z_sys_net_socket_t *socksend,
                            const _z_sys_net_endpoint_t rep, const _z_sys_net_endpoint_t lep) {
    _ZP_UNUSED(lep);
    sockrecv->_udp->leave_multicast_group(*rep._iptcp);
    sockrecv->_udp->close();
    delete sockrecv->_udp;

    socksend->_udp->close();
    delete socksend->_udp;
}

size_t _z_read_udp_multicast(const _z_sys_net_socket_t sock, uint8_t *ptr, size_t len, const _z_sys_net_endpoint_t lep,
                             _z_slice_t *addr) {
    SocketAddress raddr;
    nsapi_size_or_error_t rb = 0;

    do {
        rb = sock._udp->recvfrom(&raddr, ptr, len);
        if (rb < (nsapi_size_or_error_t)0) {
            rb = SIZE_MAX;
            break;
        }

        if (raddr.get_ip_version() == NSAPI_IPv4) {
            *addr = _z_slice_make(NSAPI_IPv4_BYTES + sizeof(uint16_t));
            (void)memcpy(const_cast<uint8_t *>(addr->start), raddr.get_ip_bytes(), NSAPI_IPv4_BYTES);
            uint16_t port = raddr.get_port();
            (void)memcpy(const_cast<uint8_t *>(addr->start + NSAPI_IPv4_BYTES), &port, sizeof(uint16_t));
            break;
        } else if (raddr.get_ip_version() == NSAPI_IPv6) {
            *addr = _z_slice_make(NSAPI_IPv6_BYTES + sizeof(uint16_t));
            (void)memcpy(const_cast<uint8_t *>(addr->start), raddr.get_ip_bytes(), NSAPI_IPv6_BYTES);
            uint16_t port = raddr.get_port();
            (void)memcpy(const_cast<uint8_t *>(addr->start + NSAPI_IPv6_BYTES), &port, sizeof(uint16_t));
            break;
        } else {
            continue;  // FIXME: support error report on invalid packet to the upper layer
        }
    } while (1);

    return rb;
}

int8_t _z_open_serial_from_pins(_z_sys_net_socket_t *sock, uint32_t txpin, uint32_t rxpin, uint32_t baudrate) {
    int8_t ret = _Z_RES_OK;

    sock->_serial = new BufferedSerial(PinName(txpin), PinName(rxpin), baudrate);
    if (sock->_serial != NULL) {
        sock->_serial->set_format(8, BufferedSerial::None, 1);  // Default in Zenoh Rust
        sock->_serial->enable_input(true);
        sock->_serial->enable_output(true);
    } else {
        ret = _Z_ERR_GENERIC;
    }

    return ret;
}
